--- a/00_einl/protokoll.tex
+++ b/00_einl/protokoll.tex
@@ -17,20 +17,20 @@ beinhalten. Das Protokoll ist zu heften.
 %und \acro{WORD}) k"onnen von den Praktikumswebseiten herunter geladen
 %werden. Wir schlagen folgenden schematischen Aufbau und Inhalt f"ur
 %ein Versuchsprotokoll vor:
-
-\vspace{1cm}
-
-\noindent{\bf \Large Titel}
-
-\noindent Versuchstitel und Nummer:  \hfill  Datum der
-Durchf"uhrung:
-
-\noindent Praktikant/-in: Name, E-Mail: e-mail
-\hfill Mitarbeiter/in:
-
-\noindent Assistent: Name des Assistenten  \hfill Platz f"ur
-Stempel, Testat und Unterschrift
-
+%
+%\vspace{1cm}
+%
+%\noindent{\bf \Large Titel}
+%
+%\noindent Versuchstitel und Nummer:  \hfill  Datum der
+%Durchf"uhrung:
+%
+%\noindent Praktikant/-in: Name, E-Mail: e-mail
+%\hfill Mitarbeiter/in:
+%
+%\noindent Assistent: Name des Assistenten  \hfill Platz f"ur
+%Stempel, Testat und Unterschrift
+%
 
 %\section{Einleitung}
 
@@ -56,9 +56,9 @@ Bitte schreiben Sie in vollst"andigen S"atzen, anstatt nur Stichpunkte anzugeben
 
 Wenn das Messprogramm abweichend von der Versuchsanleitung durchgef"uhrt wird, so ist dies unbedingt im Protokoll zu vermerken. Ebenso sind Skizzen des Versuchsaufbaus oder elektrischer Schaltungen Teil des Protokolls, sofern sie nicht in der Versuchsanleitung enthalten sind.
 
-\begin{important}
+\begin{hint}
 	Jede Messung ist mit einer Unsicherheit behaftet und daher auch jedes Messergebnis. Auch wenn die Fehlerrechnung nicht sehr beliebt ist, so ist sie dennoch ein wichtiger Teil jeder Versuchsauswertung. Erst die Angabe eines 	Fehlers auf Ihr Messergebnis macht den Vergleich mit einem Literaturwert m"oglich.
-\end{important}
+\end{hint}
 
 Die Messergebnisse sind immer auf Plausibilit"at zu "uberpr"ufen. Wenn zum Beispiel bei der Messung des Durchmessers eines Haares etwas von der Gr"o{\ss}enordnung ein Meter rauskommt, ist Ihnen wohl ein Fehler unterlaufen. Ebenso gibt die Betrachtung der Einheiten eines Rechenergebnisses (\textit{Dimensionsanalyse}) Hinweise auf Fehler in der Rechnung. 
 
@@ -96,13 +96,14 @@ Das Ergebniss der Messung der Fl"ache des Rechtecks w"urde also lauten:
 
 Benutzen Sie die nachfolgende Checkliste, um zu überprüfen ob das Protokoll, welches Sie angefertigt haben vollständig ist. Die Betreuerinnen und Betreuer benutzen dieselbe Checkliste bei ihrer Korrektur des Protokolls.
 \begin{itemize}[label={$\square$}]
-	\item Deckblatt vollständig (Namen und Unterschrift der Teilnehmer, Name des Betreuers, Datum)
+	\item Deckblatt vollständig (Namen und Unterschrift der Teilnehmer, Name des Betreuers, Datum). \\
+		\textbf{Benutzen Sie bitte das Deckblatt auf der nächsten Seite.}
 	%
 	\item Ordentliche Form
 	\begin{itemize}[label={$\square$}]
-		\item Lesbare Handschrift
+		\item Wenn handschriftlich, dann lesbare Handschrift
 		%
-		\item Sinnvolle Gleiderung
+		\item Sinnvolle Gliederung
 		%
 		\item Ganze Sätze
 	\end{itemize}
@@ -131,7 +132,7 @@ Benutzen Sie die nachfolgende Checkliste, um zu überprüfen ob das Protokoll, w
 				%
 				\item Ausgleichsgerade, inkl. Steigungsdreiecken und Fehlergeraden
 				%
-				\item suaber, ordentlich auf Millimeterpapier gezeichnet
+				\item sauber, ordentlich auf Millimeterpapier gezeichnet
 			\end{itemize}
 			%
 			\item Zwischenschritte nachvollziehbar
@@ -143,3 +144,5 @@ Benutzen Sie die nachfolgende Checkliste, um zu überprüfen ob das Protokoll, w
 	%
 	\item Protokoll links oben getackert
 \end{itemize}
+
+\includepdf[pages=-]{00_einl/Deckblatt.pdf}
