--- a/00_einl/regeln.tex
+++ b/00_einl/regeln.tex
@@ -106,8 +106,8 @@ Das Protokoll muss leserlich und übersichtlich gestaltet sein. Es ist für sich
 
 Im eigentlichen Teil der Auswertung sind deutlich und nachvollziehbar die einzelnen Auswertungsschritte aufzuschreiben. Einleitende Sätze, was gemessen wurde, und was daraus berechnet wird, sind obligatorisch. Ergebnisse sind deutlich zu kennzeichnen (Rahmen, farbiges Markieren, größere Schrift, usw.). Was sind Zwischen- oder Hilfsergebnisse, was sind Endergebnisse? Alle benutzten Formeln müssen beschrieben sein bzw. deren Herleitung klar werden. Es ist auf eine durchgehend eindeutige Variablendefinition und Variablenbenutzung im Protokoll zu achten. Alle Variablen in den Funktionen sind zu benennen bzw. zu definieren. Die Fehlerrechnung muss nachvollziehbar beschrieben werden (einfacher Mittelwert oder gewichtetes Mittel, ggf. Formel der Fehlerfortpflanzung angeben). Fehler sind sinnvoll anzugeben! Alle Werte haben Einheiten, alle Grafen eine Beschriftung! Bei Vergleich mit Literaturwerten: Woher kommen die Werte (Quellenangabe)? Eine Diskussion der Ergebnisse und der Fehler ist obligatorisch. Dazu muss man sich natürlich vorher die Frage stellen, ob das, was man berechnet hat, ein sinnvolles Ergebnis ist.
 
-Bei der Abgabe des Protokolls muss das dazugehörige original unterschriebene Messprotokoll mit abgegeben werden. Protokolle müssen in geeigneter Form zusammengeheftet sein (einfache Mappe oder Heftung reichen vollkommen), lose Blätter werden nicht akzeptiert.\\
-\textbf{Wird ein/e Praktikant/in auf die Auswertung seines/ihres eigenen Protokolls angesprochen und kann keine Auskunft zu den gemachten Rechnungen geben, so gilt das Protokoll als nicht selbständig erstellt und wird nicht testiert.} \\
+Bei der Abgabe des Protokolls muss das dazugehörige original unterschriebene Messprotokoll mit abgegeben werden. Protokolle müssen in geeigneter Form zusammengeheftet sein (einfache Mappe oder Heftung reichen vollkommen), lose Blätter werden nicht akzeptiert.
+\xhintbox{Wird ein/e Praktikant/in auf die Auswertung seines/ihres eigenen Protokolls angesprochen und kann keine Auskunft zu den gemachten Rechnungen geben, so gilt das Protokoll als nicht selbständig erstellt und wird nicht testiert.} 
 Protokolle mit einer Auswertung, die nicht auf den eigenen Messdaten basieren, bei denen die Messdaten nachträglich geändert wurden oder bei denen die Liste der am Versuch beteiligten Personen erweitert wurde, gelten als Täuschungsversuch/Urkundenfälschung und werden entsprechend geahndet.
 %
 %\begin{definition}[Abgabefrist der Protokolle]
@@ -116,10 +116,10 @@ Protokolle mit einer Auswertung, die nicht auf den eigenen Messdaten basieren, b
 %\end{definition}
 %
 
-{\bf Ein vollständiges Protokoll muss zum nächsten Praktikumstermin, also innerhalb einer Woche nach der Versuchsdurchführung, abgegeben werden.} 
+\xhintbox{Ein vollständiges Protokoll muss zum nächsten Praktikumstermin, also innerhalb einer Woche nach der Versuchsdurchführung, abgegeben werden.} 
 %Wird das Protokoll {\bf nicht innerhalb von 2~Wochen} abgegeben, {\bf verf"allt das Vortestat und der Versuch muss wiederholt werden.} 
 
-Ein Protokoll gilt nur dann als vollständig, wenn es oben genannte Bedingungen erfüllt. Insbesondere gilt es als nicht vollständig, wenn es außer dem Endergebnis keine Zwischenergebnisse enthält, die den Rechenweg und die Werte nachvollziehbar machen. Sollte das Protokoll für Korrekturen ohne Testat zurückgegeben werden, so gilt erneut die 1~Wochen-Frist ab dem Tag der Rückgabe. Die Korrekturen sind (z.B. als Anhang) zusammen mit dem vollständigen ursprünglichen Protokoll abzugeben. Sie haben die Möglichkeit, jedes Protokoll genau einmal zu überarbeiten. Wird das Protokoll nach der Korrektur immer noch nicht testiert wird, so gilt der Versuch als nicht bestanden und es muss ein Versuch (nicht notwendigerweise derselbe) nachgeholt werden.
+Ein Protokoll gilt nur dann als vollständig, wenn es oben genannte Bedingungen erfüllt. Insbesondere gilt es als nicht vollständig, wenn es außer dem Endergebnis keine Zwischenergebnisse enthält, die den Rechenweg und die Werte nachvollziehbar machen. Sollte das Protokoll für Korrekturen ohne Testat zurückgegeben werden, so gilt erneut die 1~Wochen-Frist ab dem Tag der Rückgabe. Die Korrekturen sind (z.B. als Anhang) zusammen mit dem vollständigen ursprünglichen Protokoll abzugeben. Sie haben die Möglichkeit, jedes Protokoll genau einmal zu überarbeiten. Wird das Protokoll nach der Korrektur immer noch nicht testiert, so gilt der Versuch als nicht bestanden und es muss ein Versuch (nicht notwendigerweise derselbe) nachgeholt werden.
 
 Auch für die Rückgabe der Protokolle durch die Assistenten soll die 1-Wochen-Frist eingehalten werden. Das bedeutet, dass nach spätestens vier Wochen feststeht, ob der Versuch testiert wird, oder nicht.
 
