--- a/00_einl/versuche.tex
+++ b/00_einl/versuche.tex
@@ -13,7 +13,7 @@
  3 & Wechselstrom und R-C-Kreis & A.01.108 \\ 
  4 & Spule und Transformator & A.01.108 \\ 
  5 & Trägheitsmoment & A.02.105\\ 
- 6 & Pohl'scher Resonator & ??? \\
+ 6 & Pohl'scher Resonator & A.01.105 \& 106 \\
  7 & Kapillarität und Auftrieb & A.02.102 \\ 
  8 & Innere Reibung von Flüssigkeiten & A.02.102 \\ 
  9 & Linsengesetze & A.01.104 \\ 
