--- a/Versuch_1-2n/Auswertung-2.tex
+++ b/Versuch_1-2n/Auswertung-2.tex
@@ -1,5 +1,5 @@
-\newpage
 \section{Musterauswertung}
+
 \subsection*{Erdbeschleunigung}
 Der Mittelwert der gemessenen Zeit für 10 Schwingungnen beträgt mit Standardabweichung $T_{10}= 30,4\pm 0,2$\;s. Daraus folgt für die Schwingungsdauer $T=3,04\pm 0,02$\;s. Mit dieser und der Länge des Pendelfadens $L=2,35$\;m lässt sich die Erdbeschleunigung $g$ bestimmen, da $\omega=\frac{2\pi}{T}=\sqrt{g/L}$. Daraus folgt:\\
 \begin{align*}
@@ -19,9 +19,11 @@ Daraus folgen die Werte für die Geschwindigkeit, die in Tabelle \ref{vm} aufgel
 \begin{align*}
 v_{th}=\frac{mv_{m}}{m+M+m_{k}}.
 \end{align*}
-\begin{table}
+
+\begin{table}[b]
 \begin{center}
 \begin{tabular}{|c|c|c|c|c|}
+\hline
 $h$in cm&3&4&5&6\\
 \hline
 $v_{m}$ in m/s&$0.77\pm 0.02$&$0.89\pm 0.02$&$0.99\pm 0.01$&$1.08\pm 0.01$\\
@@ -32,5 +34,6 @@ $v_{th}$ in m/s& $0.037\pm 0.001$&$0.043\pm 0.001 $ &$0.048\pm 0.0005$ &$0.052\p
 \end{center}
 \caption{Geschwindigkeit der kleinen Kugel beim Auftreffen auf die große, sowie die gemeinsame Geschwindigkeit nach dem Stoß. Der Fehler der Knetmasse wird als 0.1 g angenommen.\label{vm}}
 \end{table}
+
 Da die Messungenauigkeit sehr hoch ist, liegen nur zwei Werte für die experimentelle Geschwindigkeit $v_{exp}$ vor. $v_{3}=0.041 \pm 0.005$\;m/s für eine Fallhöhe von 3\;cm und $v_{4,5,6}=0.062\pm 0.005 $\;m/s für die anderen Fallhöhen. Dabei wurde ein systematischer Fehler von $\sigma_{x}=0.2$\;cm für den Ausschlag geschätzt.
 \end{document}
