--- a/Versuch_19-20/Versuch-20.tex
+++ b/Versuch_19-20/Versuch-20.tex
@@ -1,126 +1,56 @@
-\chapter{Spezifische Elektronenladung e/m}
-\label{v:20}
+\documentclass[11pt, twoside, a4paper]{book}
 
-In diesem Versuch wird die historische Messung der spezifischen Elektronenladung (fast originalgetreu) nachvollzogen. Dabei lernen Sie Techniken moderner Teilchenbeschleuniger und Massenspektrometern kennen.
+\usepackage{graphicx}
+\usepackage[utf8]{inputenc}
+\usepackage{ngerman}
+%\usepackage{lineno}
+\usepackage{verbatim}
+\usepackage[squaren]{SIunits}
+\usepackage{amsmath}
+\usepackage{amsfonts}
+\usepackage{amssymb}
+\usepackage{enumitem}
+\usepackage{fancyhdr}
+\usepackage{textcomp}
+\usepackage{subcaption}
+\usepackage[noadjust]{marginnote}
+\usepackage{tikz}
+\usepackage{nicefrac}
+\usepackage{framed}
+\usepackage{import}
 
-%%%--------Bemerkung-------------------
-%Eine der ersten Messungen der spezifischen Elektronenladung gelang Johann Emil Wiechert , der das Elektron etwa zeitgleich mit Joseph John Thompson entdeckte, der dafür den Nobelpreis erhielt. Wiechert arbeitete ab 1897 an der Universität Göttingen und erhielt hier 1898 den Ruf auf die weltweit erste Professur für Geophysik.
+\usetikzlibrary{calc,intersections}
+\usetikzlibrary{arrows}
+\usetikzlibrary{decorations.markings}
+\usetikzlibrary{decorations.pathreplacing}
+\usepackage[european resistors]{circuitikz}
+\usepackage[ 
+    top=2cm, 
+    bottom=2cm, 
+    outer=3cm, 
+    inner=3cm,
+    marginparwidth=2.5cm,
+		headheight=14pt
+  ]{geometry}
 
-%------------------------------------------------
-\section{Stichworte}
-%------------------------------------------------
+\usepackage{parskip}
+\usepackage{pdfpages}
 
-Erzeugung eines homogenen Magnetfeldes; Lorentzkraft; Bewegung geladener Teilchen in elektrischen und magnetischen Feldern.
-%
-%------------------------------------------------
-\section{Literatur}
-%------------------------------------------------
+\setlength{\parindent}{0pt}
 
-Gehrtsen, Kapitel 7.1.2/3 und 8.2.1/2
-%
-%------------------------------------------------
-\section{Anwendungsbeispiele}
-%------------------------------------------------
+\input{../utils/format.tex}
 
-Die Messung der spezifischen Elektronenladung, die J.J. Thomson zuerst in 1897 durchführte, ist einer der größten Meilensteine in der Entdeckung der elemtaren Bausteine der Materie. Die Idee, daß Atome nicht unteilbar sind, sondern vielmehr aus grundlegenderen, sogenannten fundamentalen, Bausteinen aufgebaut seien, existierte schon vor Thomsons Messungen. Allerdings war die Annahme, daß diese Bausteine dieselbe Größe hätten, wie das kleineste bekannte Atome, das Wasserstoffatome. Basierend auf seiner Beobachtung, daß Kathodenstrahlen eine sehr viel größere Reichweite in Luft haben, als für ein Teilchen von der Größe eines Atoms zu erwarten war, schlug Thomson die Existenz eines fundamentalen Teilchens vor, welches mehr als tausendmal kleiner sei als ein Wasserstoffatom.\\
-In seinem Experiment zur Messung der spezifischen Ladung der Teilchen, die die Kathodenstrahlen ausmachten fand er, daß diese sogar etwa 2000 mal größer ist, als die für ein H-Atom erwartete. Nach der Messung der Ladung dieser Teilchen im Millikan Versuch war klar, daß diese Teilchen zwar dieselbe Ladung (bis auf das Vorzeichen) wie ein H-Atomkern haben, aber etwa 2000 mal leichter sind, was die große Reichweite in Luft erklärte. Weiterhin konnte Thomson zeigen, daß Kathodenstrahlen immer aus eben diesen Teilchen bestehen, unabhängig vom Material der Kathode von der sie ausgestrahlt werden.\\
-Diese Ergebnisse, die seit langem zu unserem Schulbuchwissen gehören, brachten Thomson den Nobelpreis in 1906 ein und machten ihn allgemein bekannt als den Entdecker des Elektrons.\\
+  %\input{utils/disable-tutor.tex}
+  \input{../utils/enable-tutor.tex}
 
-\noindent
-Die von Thomson benutze Technik, geladene Teilchen in elektrischen Feldern zu beschleunigen und in magnetischen Felder abzulenken, wird heute nicht nur in modernen Teilchenbeschelunigern in der Grundlagenphysik, der medizinischen Hadronen- und Strahlentherapie und der Materialprüfung eingesetzt, sondern wird auch in Massenspektrometern benutzt, um chemische Verbindungen zu charakterisieren. Beispiele hierfür sind die Identifizierung von Substanzen in Körperflüssigkeiten in der medizinischen Chemie, kriminaltechnische Untersuchungen, Dopingkontrolle und die militärische Analytik von chemischen Kampfstoffen.
+\input{../utils/tutor.tex}
 
-%------------------------------------------------
-\section{Theoretischer Hintergrund}
-%------------------------------------------------
+\begin{document}
 
-\subsection{Bewegung geladener Teilchen in E- und B-Feldern}
+\renewcommand{\thechapter}{\arabic{chapter}}
+\setcounter{chapter}{19}
+\def\chaptername{Versuch}
 
-Geladene Teilchen werden von elektrischen und magnetischen Feldern unvergleichlich viel stärker beeinflußt als vom Gravitationsfeld (außer in der Nähe schwarzer Löcher). 
+\include{Anleitung-20}
 
-\subsubsection*{Geladene Teilchen im homogenen elektrischen Feld}
-
-Zwischen zwei planparallelen Platten mit dem Abstand $D$ im Vakuum liegen die Spannung $U$. Wenn keine Ladungsträger zwischen den Platten das Feld verzerren, ist dieses homogen und hat die Form $\vec{E}=\frac{U}{d}\vec{e}_E$. Dieses Feld übt auf eine elektrische Ladung $Q$, welche wir in Einheiten der Ladung des Elektrons (Elemantarladung) angeben als $Q = q\cdot e$, eine Kraft $\vec{F} = qe\vec{E}$ aus und beschleunigt sie mit
-\begin{equation}
-	\vec{a} = \frac{qe}{m}\frac{U}{d}\vec{e}_E\; .
-\end{equation}
-Wie man sieht, wirkt die Kraft immer in Richtung des elektrischen Feldes. Elektrische Felder können also sowohl zur Umlenkung geladener Teilchen benutzt werden, als auch zur Beschleunigung (i.e. Erhöhung der kinetischen Energie).
-
-\subsubsection*{Geladene Teilchen im homogenen Magnetfeld}
-
-Wenn eine Ladung $Q = q\cdot e$ mit der Geschwindigkeit $\vec{v}$ durch ein Magnetfeld $\vec{B}$ fliegt, so erfährt sie eine Kraft 
-\begin{equation}
-	\vec{F} = qe\, \vec{v}\times\vec{B}\, ,
-\end{equation}
-die Lorentz-Karft. Diese steht, wie man am Kreuzprodukt sieht (Rechte-Hand-Regel), senkrecht auf der Bewegungsrichtung und der magnetischen Feldrichtung. Magnetfelder können damit nur zur Umlenkung geladener Teilchen benutzt werden, nicht jedoch zur Erhöhung der kinetischen Energie des Teilchens.
-
-%------------------------------------------------
-\section{Versuchsaufbau}
-%------------------------------------------------
-
-\input{Versuch_19-20/Abbildungen/Heizung_tikz.tex}
-
-%------------------------------------------------
-\section{Fragen zur Vorbereitung}
-%------------------------------------------------
-
-\begin{enumerate}
-	%
-	\item Was soll heute im Praktikum gemessen werden? Warum?
-	%
-	\item Wie lautet der Ausdruck für die Kraft zwischen zwei Punktladungen?
-	%
-	\item Wie berechnet sich das elektrische Feld eines Plattenkondensators aus der Spannung $U$ und dem Plattenabstand $d$?
-	%
-	\item Welche Geschwindigkeit hat ein Teilchen, wenn es eine Spannung $U$ durchläuft?
-	%
-	\item Was ist die Lorentz-Kraft? Wie ist sie definiert?
-	%
-	\item Wie sieht die Bahnkurve eines geladenen Teilchens aus, wenn es sich senkrecht zu einem Magnetfeld bewegt?
-	%
-	\item Was ist ein homogenes Magnetfeld?
-	%
-	\item Wie lautet der Ausdruck für die Zentrifugalkraft?
-	%
-	\item Wie berechnet sich aus Zentrifugalkraft und Lorentzkraft ein Ausdruck für die Spezifische Elektronenladung $e/m$?
-	%
-\end{enumerate}
-
-%------------------------------------------------
-\section{Durchführung} 
-%------------------------------------------------
-
-Ein Elektronenstrahl beschreibt im Magnetfeld $B$ zweier Helmholtzspulen eine Kreisbahn. Die Spulen werden wie in der Abbildung unten verschaltet.
-
-\begin{figure}[h]
-	\centering
-		\includegraphics[width=0.50\textwidth]{Versuch_19-20/Abbildungen/Schaltung-HHSpulen.jpg}
-	\label{fig:Schaltung-HHSpulen}
-\end{figure}
-
-\textbf{Hinweis:} Lassen Sie Ihre Schaltung vor dem Einschalten durch den Betreuer überprüfen. Schalten Sie die Anodenspannung erst ein, wenn der Kathodenzylinder rot glüht.\\
-
-\noindent
-Messen Sie für verschiedene Anodenspannungen: $U$ = (125, 150, ..., 225\,V) und Spulenstromstärken: $I$ = (0.6, 0.7, ..., 0.9\,A) den maximalen Durchmesser $d$ dieser Kreisbahn. Berechnen Sie für einen Messpunkt $e/m$ nach untenstehender Formel.
-
-%------------------------------------------------
-\section{Auswertung} 
-%------------------------------------------------
-
-\begin{enumerate}
-	%
-	\item Leiten Sie die Gleichung her:
-		\begin{equation}
-			\frac{U}{B^2} = \frac{er^2}{2m}
-		\end{equation}
-		Nehmen Sie das Magnetfeld $B$ dabei als konstant an.
-	%
-	\item Tragen Sie $U/B^2$ als Funktion von $r^2/2$ graphisch auf. Berechnen Sie aus der Steigung der Geraden durch die Messpunkte die spezifische Elektronenladung $e/m$ inklusive Fehler.
-\end{enumerate}
-
-\textbf{Hinweis:} Zwischen dem Magnetfeld $B$ und dem Spulenstrom $I$ besteht ein linearer Zusammenhang. Die graphische Darstellung der Funktion $B$ = f($I$) für das benutzte Spulenpaar befindet sich auf der nächsten Seite !!
-
-\begin{figure}[h]
-	\centering
-		\includegraphics[width=1.00\textwidth]{Versuch_19-20/Abbildungen/Eichung-HHSpulen.jpg}
-	\label{fig:Eichung-HHSpulen}
-\end{figure}
+\end{document}
